--- a/style.css
+++ b/style.css
@@ -7,14 +7,16 @@
 html,body{
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 #main{
     width: 100%;
+    
 }
 #loader{
     /* display: none; */
     position: fixed;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: #222;
     color: white;
@@ -41,7 +43,7 @@ html,body{
     left: 50%;
     width: 100%;
     transform: translate(-50%,-50%);
-    font-size: 5vh;
+    font-size: 6vh;
     font-weight: 500;
   
 }
@@ -87,9 +89,11 @@ html,body{
     padding: 0 5vw;
     width: 100%;
     height: 100px;
-    background-color:  #14CF93;
+    
+    
 }
 #nav a{
+    /* display: none; */
     position: relative;
     text-decoration: none;
     text-transform: uppercase;
@@ -97,8 +101,10 @@ html,body{
     font-size: 13px;
     color: #000000;
     letter-spacing: 2px;
+    
 
 }
+
 #nav a .line{
     display: inline-block;
     width: 100%;
@@ -162,11 +168,12 @@ path,polyline{
     width: 30%;
     height: auto;
 }
-.imglef h1{
-    font-size: 2vw;
-    font-weight: 540;
+.imglef h3{
+    font-size: 1.7vw;
+    font-weight: 500;
     color: #333;
-    letter-spacing: 1px;
+    line-height: 35px;
+    letter-spacing: 2px;
     font-family: "Mazius Review 20.09";
 }
 .imgrig{
@@ -183,37 +190,43 @@ path,polyline{
     width: 27vw;
     height: 35vw;
     background-color: red;
-    filter: grayscale();
+    filter: grayscale(0);
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 2s;
     border-radius: 1vw;
 }
 .imgrig .imgcntnr:hover{
-    filter: grayscale(0);
+    filter: grayscale(1);
+}
+.imgrig .imgcntnr h3{
+    color: #ffffff;
+    font-size: 6vh;
+    padding: 2.5vh;
 }
 .imgrig .imgcntnr:nth-child(1){
-   background-image: url("https://plus.unsplash.com/premium_photo-1669138512601-e3f00b684edc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTh8fHBvcnRyYWl0fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60");
+   background-image: url("https://images.unsplash.com/photo-1633164227069-df58d5f183df?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1932&q=80");
    background-size: cover;
    background-position: center;
     margin-bottom: 10vh;
     transform:translate(-30%,-5%) rotate(-10deg);
 }
 .imgrig .imgcntnr:nth-child(2){
-    background-image: url("https://images.unsplash.com/photo-1557053910-d9eadeed1c58?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjV8fHBvcnRyYWl0fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60");
+    background-image: url("https://images.unsplash.com/photo-1625014618427-fbc980b974f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80");
     background-size: cover;
     background-position: center;
     transform:translate(-9%,-1%) rotate(-15deg);
 }
 
 .imgrig .imgcntnr:nth-child(3){
-    background-image: url("https://plus.unsplash.com/premium_photo-1668896122548-363e19abee34?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzB8fHBvcnRyYWl0fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60");
+    background-image: url("https://images.unsplash.com/photo-1638871735143-4d16a2f15ddc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1964&q=80");
     background-size: cover;
     background-position: center;
     transform: translate(19%,5%) rotate(-10deg);
 }
 #work{
+    transition: background-color cubic-bezier(0.19, 1, 0.22, 1) 2s;
     width: 100%;
     min-height: 70vh;
-    background-color: #F2F2F2;
+    background-color: #ffffff; 
     display: flex;
 }
 #work::before{
@@ -306,13 +319,774 @@ path,polyline{
 }
 .cnt img{
     margin-top: 2%;
-    width: 105%;
+    width: 100%;
+    transition: filter cubic-bezier(0.19, 1, 0.22, 1) 3s;
     
 }
+
 .cnt1{
-    width: 55%;
+    width: 50%;
 }
 .cnt2{
     width: 25%;
+    
 }
+
+#cursor{
+    position: fixed;
+    width: 17vw;
+    top: 0;
+    left: 0;
+    z-index: 99999;
+}
+#cursor>div{
+    pointer-events: none;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    opacity: 0;
+    position: absolute;
+}
+#elem{
+    width: 100%;
+    position: relative;
+}
+
+#cursor .crow{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 150%;
+    padding: .7vw;
+}
+.crow .ccircle{
+    width: 2vw;
+    height: 2vw;
+    border: 2px solid #fff;
+    border-radius: 50%;
+}
+.crow .ccapusle{
+    padding: .7vw 3vw;
+    border-radius: 100px;
+    background-color: #fff;
+}
+#elem img{
+    width: 200%;
+    opacity: 1;
+    border-radius: 10px;
+    animation: an 4s linear infinite;
+    position: absolute;
+}
+#elem img:nth-child(2){
+    animation-delay: 1s;
+}
+#elem img:nth-child(3){
+    animation-delay: 2s;
+}
+#elem img:nth-child(4){
+    animation-delay: 3s;
+}
+#elem img:nth-child(5){
+    animation-delay: 4s;
+}
+
+@keyframes an{
+    0%{
+        opacity: 1;
+    }
+    20%{
+        opacity: 1;
+    }
+    21%{
+        opacity: 0;
+    }
+    40%{
+        opacity: 0;
+    }
+    60%{
+        opacity: 0;
+    }
+    80%{
+        opacity: 0;
+    }
+    100%{
+        overflow: 0;
+    }
+}
+.text{
+    max-width: 100vw;
+    margin-top: 10vh;
+    background-color: #FFFFFF;
+}
+.text h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5vw;
+    font-weight: 500;
+    color: #2f2f2f;
+    font-family: "Gilroy";
+}
+.gallery {
+    align-items: center;
+    margin-top: 10vh;
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+  }
+  
+  .gallery_wrapper {
+    overflow-x: hidden;
+    scroll-snap-align: center;
+    min-width: 75%;
+    padding: 0 1% 0 1%;
+  }
+  
+  .gallery_item {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-right: 1%;
+  }
+  .textss{
+    overflow: hidden;
+    
+    margin-right: .5%;
+  }
+ 
+  .gallery_item .textss img {
+    width: 100%;
+    transition: all ease 1s;
+    height: 100%;
+    object-fit: cover;
+ 
+  }
+  ::-webkit-scrollbar {
+    display: none;
+}
+
+.textss img:hover:nth-child(1){
+    scale: .9;
+}
+.textss h3{
+    font-size:1.3vw;
+    font-weight: 500;
+    color: #3b3b3b;
+    font-family:'Gilroy';
+    margin-top: 2vh;
+    
+}
+#line_display{
+    display: none;
+}
+.text_cnt{
+    width: 100vw;
+    height: 5vh;
+    margin-top: 15vh;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+.text_cnt h1{
+   
+    font-size: 6vw;
+    font-weight: 500;
+    color: #2f2f2f;
+    font-family: gilroy;
+}
+.container{
+    margin-top: 20vh;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 5vw 0 5vw;
+} 
+.left_images{
+   margin-top: 11vh; 
+}
+.left_images .imgcntnr{
+    width: 200px; /* Adjust the width and height as per your requirement */
+    height: 260px;
+    background-image: url("myimg.jpg"); /* Replace "image.jpg" with the path to your image */
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0 0 25px #888888;
+    /* filter: drop-shadow(5px 5px grey); */
+    transition: all ease 1s;
+    border-radius: 5px;
+
+}
+.left_images p{
+    width: 200px;
+    font-size: 12.5px;
+    margin-top: 2vh;
+    color: #6e6e6e; 
+    letter-spacing: 1px;
+    font-weight: 500; 
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+}
+.right_cnt{
+    width: 60%;
+    height: 50%;
+}
+.right_cnt .cont{
+    width: 100%;
+    height: 100%;
+    /* background-color: red; */
+}
+.cont_display{
+    width: 100%;
+    padding: 1.5vw 1vw 1.5vw 1vw ;
+    /* background-color: red; */
+    display: flex;
+    /* box-shadow: 0px 0px 3px 0px rgb(200, 199, 199); */
+    justify-content: space-between;
+
+}
+.cont_display p{
+    color: grey;
+    font-size: 12px;
+    font-family: "Gilroy";
+    letter-spacing: 1px;
+}
+.cont_display h3{
+    color: #464646;
+    font-size: 1.5vw;
+    letter-spacing: .5px;
+    font-weight: 600;
+    font-family: times new roman, gilroy,  sans-serif, mazius, gilroy-semi-bold;
+}
+.circle{
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    background-color: #14CF93;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+}
+.circle i{
+    
+    color: white;
+    font-size: 25px;
+}
+.imgcntnr:hover{
+    scale: .9;
+}
+.circle a:hover{
+    transform: rotate(-45deg);
+}
+.circle a{
+    transition: all ease .5s;
+    text-decoration: none;
+
+}
+
+#about{
+    position: relative;
+    width: 100vw;
+    overflow-x: hidden;
+    height: 100vh;  
+    object-fit: cover;
+    margin-top: 8vh;
+    object-position: center;
+    background-image: url("https://images.unsplash.com/photo-1595113316349-9fa4eb24f884?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2072&q=80");
+    
+}
+#about h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5vw;
+    font-weight: 500;
+    color: #13450F;
+    font-family: "Gilroy";
+}
+
+
+.middle_element{
+    width: 100%;
+    display: flex;
+    position: absolute;
+    top: 50%;
+}
+.middle_element .elem{
+    width: 31%;
+    padding: 20px;
+    border: 2px solid #13450F;
+    border-radius: 50px;
+    text-align: center;
+    align-items: center;
+    margin-left: 2%;
+    
+}
+.elem{
+    cursor: pointer;
+}
+.elem a{
+    text-decoration: none;
+    
+}
+.elem h2{
+    color: #13450F;
+    font-size: 5vh;
+    font-weight: 600;
+}
+.sidebar{
+    cursor: pointer;
+    position:absolute;
+    width: 33%;
+    height: 100%;
+    padding: 1vw;
+    z-index: 999;
+    left: -100%;
+    right: 0%;
+    transition: all ease 1s ;
+    background-color: #2E512E;
+}
+.sidebar h3{
+    color: white;
+    font-size: 3.5vh;
+    font-weight: 400;
+    text-align: center;
+}
+.social{
+    width: 75%;
+    height: 80%;
+    margin-top: 20vh;
+    margin-left: 7vh;
+    
+   
+    
+}
+.texts h1 .r_span{
+    color: #14CF93;
+    font-style: italic;
+    font-weight: 550;
+    font-family: 'Franklin';
+    font-size: 121px;
+}
+.socialgram{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: #14CF93; */
+    align-items: center;
+    text-align: center;
+    color: white;
+    border-bottom: 2px solid white;
+    margin-top: 3vh;
+    transition: all ease 1s;
+}
+.socialgram:hover{
+    background-color: #dcdbdb;
+    color: rgb(39, 38, 38);
+}
+.socialone{
+    display: flex;
+    
+}
+.socialgram .socialone i{
+    font-size: 3.5vh;
+    margin-right: .5vw;
+    
+}
+.socialone h2{
+    font-weight: 500;
+}
+.socialgram .circle i:hover{
+    transform: rotate(-45deg);
+}
+.socialgram .circle a{
+    transition: all ease 1s;
+}
+.socialgram .circle{
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    background-color: #ffffff;
+    display: flex;
+    transition: all ease 1s;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+}
+.socialgram .circle i{
+    color: black;
+}
+.getintouch{
+    transition: all ease 1s;
+    width: 40%;
+    height: 60%;
+    position: absolute;
+    /* opacity: 0; */
+    right: -120%;
+    
+    top: 50%;
+    transform: translate(-50%,-50%);    
+    background-color: #2E512E;
+    z-index: 999;
+}
+
+.getintouch form{
+    
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.getintouch form h3{
+    font-size: 30px;
+    padding: 30px 0;
+    color: rgb(255, 255, 255);
+    letter-spacing: 3px;
+}
+
+.getintouch form input{
+    outline: none;
+    border: none;
+    height: 30px;
+    width: 40%;
+    color: white;
+    background: rgba(225, 221, 221, 0.1);
+    backdrop-filter: blur(10px);
+    border: none;
+    box-shadow: 0 0 5px rgba(91, 90, 90, 0.5) ;
+    font-size: 15px;
+    padding: 0 15px;
+    margin: 20px 0;
+    letter-spacing: 2px;
+    border-radius: 5px;
+}
+.getintouch form input:nth-child(4){
+   
+    width: 80%;
+    
+}
+.getintouch form input:nth-child(5){
+    
+    width: 80%;
+    
+}
+
+
+.getintouch form input[type="submit"]{
+    width: 30%;
+    cursor: pointer;
+    background-color: #fff;
+    margin-top: 35px;
+    border-radius: 5px; 
+    color: #2E512E;
+    font-size:17px;
+} 
+button{
+    width: 30%;
+    height: 7%;
+    cursor: pointer;
+    background-color: white;
+    margin-top: 35px;
+    border-radius: 5px;
+    
+    color: #2E512E;
+    font-size:17px;
+    border: none;
+}
+
+.one{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-evenly;
+}
+
+.marquee{
+    display: none;
+}
+.info p{
+    display: none;
+}
+.row svg{
+    display: none;
+}
+
+/* Add media query for mobile view */
+@media only screen and (max-width: 767px) {
+    html,body{
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+    }
+    #nav a{
+       font-size: 10px; 
+    }
+    #nav a .line{
+        display: none;
+    }
+    .row{
+        margin-top: -1%;
+    }
+    #loader h1 span{
+        font-size: 30px;
+        margin-bottom: 12%;
+    }
+    .navres{
+        width: 100%;
+        margin-top: -10vh;
+        align-items: center;
+        text-align: center;
+        display: flex;
+        justify-content: space-around;
+    }
+    .navres a{
+        text-decoration: none;
+        font-size: 10px;
+        color: #343434;
+        display: block;
+    }
+    .c-visual svg{
+        width: 100%;
+    }
+    .text h5{
+        display: none;
+    }
+    .row svg{
+        width: 40px;
+    }
+    #home{
+        /* background-color: red; */
+        height: 90%;
+    }
+    #imagery{
+        margin-top: 5%;
+    }
+    .imglef{
+        display: none;
+    }
+    .imgrig{
+        padding: 0%;
+        width: 100vw;
+        height: auto;
+        margin-top: -30%;
+    }
+    .imgrig .imgcntnr{
+        position: absolute;
+        width: 30vw;
+        height: 35vw;
+    }
+    .imgrig .imgcntnr:nth-child(3){
+        left: -5%;
+        transform: translate(0%,0%) rotate(0deg);
+    }
+    .imgrig .imgcntnr:nth-child(1){
+        right: -5%;
+        margin-bottom:0vh;
+        transform: translate(0%,0%) rotate(0deg);
+    }
+    .imgrig .imgcntnr:nth-child(2){
+        right: 32.5%;
+        transform: translate(0%,0%) rotate(0deg);
+    }
+    .imgrig .imgcntnr h3{
+        font-size: 22px;
+        text-align: center;
+        padding: 0;
+    }
+    .info p{
+        font-size: 11px;
+        letter-spacing: .3px;
+    }
+    .imgrig marquee{
+        margin-top: 60%;
+    }
+    #work .left{
+        display: none;
+    }
+    .info{
+       
+        width: 100%;
+        height: 30%;
+        margin-top: 100%;
+        align-items: center;
+        text-align: center;
+       
+    }
+    .info p{
+        display: block;
+    }
+    
+    .line{
+        margin-top: 15%;
+        border-color: #767676;
+    }
+    #work{
+        height: 30vh;
+        /* background-color: red; */
+    }
+    #line_display{
+        display: block;
+    }
+    .texts h1{
+        font-size: 30px;
+        letter-spacing: .6px;
+    }
+    .texts h1 .r_span{
+        font-size: 30px;
+        letter-spacing: 1.5px;
+    }
+    .texts svg{
+        width: 25px;
+    }
+   .text h1{
+    font-size: 25px;
+   }
+   .gallery{
+    padding: 0 10vw 0 10vw;
+   }
+   .gallery_item{
+    display:inline;
+   
+   }
+   .textss{
+    width: 80vw;
+   }
+   .textss h3{
+    font-size: 15px;
+    margin-bottom: 10px;
+   }
+   .text_cnt{
+    align-items: center;
+    text-align: center;
+    margin-top: 25%;
+   }
+   .text_cnt svg{
+    width: 20px;
+   }
+   .container{
+    margin-top: 25%;
+    display: inline;
+   }
+   .left_images .imgcntnr{
+    width: 40%;
+    height: 25vh;
+    box-shadow: 0 0 0 0;
+   }
+   .left_images{
+    width: 100vw;
+    margin-left: 20%;
+    margin-top: 15%;
+    align-items: center;
+    text-align: center;
+    /* background-color: red; */
+   }
+   .left_images p{
+    font-size: 10px;
+    margin-left: -20px;
+   }
+   .right_cnt{
+    width: 80vw;
+    margin-top: 30%;
+   }
+   .cont_display p{
+    font-size: 10px;
+   }
+   .cont_display p span{
+    font-size: 9px;
+   }
+   .cont_display h3{
+    font-size: 11px;
+    color: #4b4b4b;
+   }
+   .cont_display .circle{
+    width: 10%;
+    height: 10%;
+    border-radius: 100px;
+   }
+   .cont_display a i{
+    font-size: 15px;
+   }
+   #about{
+    overflow-y: hidden;
+    height: 90vh;
+   }
+   #about h1{
+    font-size: 40px;
+    letter-spacing: 1px;
+    margin-top: 10%;
+   }
+   .middle_element{
+    display: inline;
+    position: absolute;
+    top: 45%;
+    left: 67%;
+    transform: translate(-50%,-50%);
+   }
+   .middle_element .elem{
+    width: 60%;
+    margin-top: 20%;
+    padding: 10px 5px 10px 5px;
+   }
+   .elem  h2{
+    font-size: 20px;
+   }
+   .sidebar{
+    width: 100%;
+   }
+   .sidebar h3{
+    font-size: 25px;
+    
+   }
+   .cross{
+    margin-top: 10%;
+    
+   }
+   .getintouch{
+    position: absolute;
+    width: 80%;
+   }
+   .marquee{
+    display: block;
+   }
+   .socialone{
+    align-items: center;
+    text-align: center;
+   }
+   .socialone h2{
+    font-size: 18px;
+    margin-left: 8px;
+   }
+   .socialgram .circle{
+    width: 30px;
+    height: 30px;
+   }
+   .socialgram .circle a i{
+    font-size: 17px;
+   }
+   .getintouch form .one h3{
+    font-size: 15px;
+   }
+   .getintouch form .one h2{
+    font-size: 15px;
+   }
+   .getintouch form input[type="submit"]{
+    font-size: 13px;
+   }
+   .getintouch form input{
+    font-size: 13px;
+   }
+   #work{
+    overflow-y: hidden;
+   }
+   .row svg{
+    display: block;
+}
+
+}
+
+
+
 
