--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ html,body{
     font-size: 13px;
     color: #000000;
     letter-spacing: 2px;
+    z-index: 99999999;
     
 
 }
@@ -589,9 +590,9 @@ path,polyline{
     position: relative;
     width: 100vw;
     overflow-x: hidden;
+    overflow-y: hidden;
     height: 100vh;  
     object-fit: cover;
-    margin-top: 8vh;
     object-position: center;
     background-image: url("https://images.unsplash.com/photo-1595113316349-9fa4eb24f884?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2072&q=80");
     
@@ -720,28 +721,31 @@ path,polyline{
 }
 .getintouch{
     transition: all ease 1s;
-    width: 40%;
-    height: 60%;
+    width: 42%;
+    height: 100%;
     position: absolute;
     /* opacity: 0; */
     right: -120%;
-    
     top: 50%;
     transform: translate(-50%,-50%);    
     background-color: #2E512E;
     z-index: 999;
 }
-
+.touch_text{
+    font-size: 10px;
+}
 .getintouch form{
     
     height: 100%;
-    width: 100%;
+    width: 80%;
+    margin-top: 30%;
     text-align: center;
     border-radius: 5px;
 }
 
+
 .getintouch form h3{
-    font-size: 30px;
+    font-size: 27px;
     padding: 30px 0;
     color: rgb(255, 255, 255);
     letter-spacing: 3px;
@@ -774,35 +778,28 @@ path,polyline{
     
 }
 
-
-.getintouch form input[type="submit"]{
-    width: 30%;
-    cursor: pointer;
-    background-color: #fff;
-    margin-top: 35px;
-    border-radius: 5px; 
-    color: #2E512E;
-    font-size:17px;
-} 
 button{
-    width: 30%;
-    height: 7%;
+    width: 22%;
+    height: 5%;
     cursor: pointer;
     background-color: white;
     margin-top: 35px;
     border-radius: 5px;
-    
     color: #2E512E;
-    font-size:17px;
+    font-size:15px;
+    font-weight: 600;
     border: none;
 }
 
 .one{
+    padding: 0 10% 0 10%;
     display: flex;
     align-items: center;
     text-align: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
+
+
 
 .marquee{
     display: none;
@@ -1047,6 +1044,11 @@ button{
    .getintouch{
     position: absolute;
     width: 80%;
+    height: 55%;    
+   }
+   .getintouch form{
+    margin-top: 0%;
+    width: 100%;
    }
    .marquee{
     display: block;
@@ -1072,7 +1074,7 @@ button{
    .getintouch form .one h2{
     font-size: 15px;
    }
-   .getintouch form input[type="submit"]{
+   button{
     font-size: 13px;
    }
    .getintouch form input{
@@ -1086,7 +1088,3 @@ button{
 }
 
 }
-
-
-
-
