--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html,body{
     /* transform: translateY(-70%); */
 }
 #green{
-    display: none;
+    /* display: none; */
     position: absolute;
     top: 0%;
     width: 100%;
@@ -164,6 +164,7 @@ path,polyline{
     margin-top: 20vw;
     /* background-color: red; */
 }
+
 
 #imagery .imglef{
     width: 30%;
@@ -827,6 +828,9 @@ button{
 .row svg{
     display: none;
 }
+.c-visual svg{
+    display: block;
+}
 
 /* Add media query for mobile view */
 @media only screen and (max-width: 767px) {
@@ -1103,6 +1107,9 @@ button{
    }
    .row svg{
     display: block;
+}
+.c-visual svg{
+    display: none;
 }
 
 }
