--- a/style.css
+++ b/style.css
@@ -750,7 +750,6 @@ path,polyline{
     padding: 30px 0;
     color: rgb(255, 255, 255);
     letter-spacing: 3px;
-   
 }
 
 .getintouch form input{
@@ -831,6 +830,46 @@ button{
 .c-visual svg{
     display: block;
 }
+
+#skill{
+    width: 100vw;
+    height: 100vh;
+    /* background-color: red; */
+}
+#skill h1{
+    
+    font-size: 5vw;
+    font-weight: 500;
+    color: #2f2f2f;
+    font-family: gilroy;
+    align-items: center;
+    text-align: center;
+}
+.cards{
+   padding-left: 10vw;
+    width: 85vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10vh;
+}
+.card {
+    width: 170px;
+    margin: 20px;
+    /* border: 1px solid #ccc; */
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+}
+.card img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    
+}
+
 
 /* Add media query for mobile view */
 @media only screen and (max-width: 767px) {
@@ -1110,6 +1149,9 @@ button{
 }
 .c-visual svg{
     display: none;
+}
+.card {
+    width: calc(50% - 40px);
 }
 
 }
